--- a/src/components/SectionThree/style.css
+++ b/src/components/SectionThree/style.css
@@ -1,45 +1,51 @@
-.card-rasm button{
-width: 100px;
-border-radius: 50%;
-border: 2px solid   #DEDEDE;
-height: 100px;
-outline: none;
-background-color: white;
-margin-top: -50px;
-margin-bottom: 30px;
+.card-rasm button {
+  width: 100px;
+  border-radius: 50%;
+  border: 2px solid #DEDEDE;
+  height: 100px;
+  outline: none;
+  background-color: white;
+  margin-top: -50px;
+  margin-bottom: 30px;
 }
-.card{
-    width: 278px;
-height: 184px;
-top: 1538px;
-left: 135px;
 
-opacity: 1;
-border-radius: 5px;
-border-width: 1px;
-border: 2px solid #DEDEDE;
-text-align: center;
+.card {
+  width: 278px;
+  height: 184px;
+  top: 1538Fpx;
+  left: 135px;
+
+  opacity: 1;
+  border-radius: 5px;
+  border-width: 1px;
+  border: 2px solid #DEDEDE;
+  text-align: center;
 
 }
-.cards{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px;
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px;
 }
-.card:hover{
-    background-color: #F3CB3E;
-    color: white;
+
+.card:hover {
+  background-color: #F3CB3E;
+  color: white;
 }
-.text1{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+
+.text1 {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
-.text1  h3{
-    color: #F3CB3E;
+
+.text1 h3 {
+  color: #F3CB3E;
 }
+
 .cart {
   width: 278px;
   height: 366px;
@@ -56,10 +62,10 @@ text-align: center;
   position: absolute;
   inset: 0;
   background: url(../../assets/social.png) center no-repeat;
-  background-size: 120px; 
+  background-size: 120px;
   opacity: 0;
   transition: opacity 0.3s ease;
- 
+
 }
 
 
@@ -67,8 +73,9 @@ text-align: center;
   opacity: 1;
 
 }
-.cart:hover img{
-    background-color: #F3CB3E;
+
+.cart:hover img {
+  background-color: #F3CB3E;
 }
 
 .text2 {
@@ -85,12 +92,14 @@ text-align: center;
 .cart:hover h2 {
   color: #1195FF;
 }
-.cart-rasm img{
-width: 278px;
+
+.cart-rasm img {
+  width: 278px;
 
 }
-.carts{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
+
+.carts {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
 }
